Add rust binary to get score for each seed

--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "nostradamus"
+edition = "2021"
 version = "0.1.0"
 
 [lib]
 name = "nostradamus"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 pyo3 = { version = "0.20.0", features = ["extension-module"] }
