--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -13,6 +13,7 @@ rc4 = "0.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 lazy_static = "1.4.0"
+rustc-hash = "1.1.0"
 
 [profile.release]
 debug = 1
