--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -15,5 +15,12 @@ serde_json = "1.0"
 lazy_static = "1.4.0"
 rustc-hash = "1.1.0"
 
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"]  }
+
+[[bench]]
+name = "search_benchmark"
+harness = false
+
 [profile.release]
 debug = 1
