--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -14,12 +14,17 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 lazy_static = "1.4.0"
 rustc-hash = "1.1.0"
+rand = "0.8.5"
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"]  }
 
 [[bench]]
-name = "search_benchmark"
+name = "beam_search_benchmark"
+harness = false
+
+[[bench]]
+name = "mcts_benchmark"
 harness = false
 
 [profile.release]
