--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -14,7 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 lazy_static = "1.4.0"
 rustc-hash = "1.1.0"
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["small_rng"] }
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"]  }
