--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0"
 lazy_static = "1.4.0"
 rustc-hash = "1.1.0"
 rand = { version = "0.8.5", features = ["small_rng"] }
+memory-stats = "1.1.0"
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"]  }
